Content: As a user, if I click on a tag then I want to see a page showing all posts for that tag. - Fixed spacing between meta data for tags.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -293,13 +293,14 @@
     padding-right: 5px;
   }
 
-  .author {
+  .author, .categories {
     padding: 0 5px;
   }
 
-  .categories {
+  .tags {
     padding-left: 5px;
   }
+
 }
 
 .post-content {
